--- a/live-client/package.json
+++ b/live-client/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
+    "@antv/g2": "^4.0.11",
     "@delon/abc": "^9.4.0",
     "@delon/acl": "^9.4.0",
     "@delon/auth": "^9.4.0",
@@ -45,6 +46,7 @@
     "ngx-amap": "^3.0.5",
     "rxjs": "~6.5.4",
     "screenfull": "^5.0.2",
+    "ts-md5": "^1.2.7",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
